# myetl

./: LICENSE  README.md  pyproject.toml
examples/csv_sql/data/: bundesliga.xlsx  costs.csv  sales.csv
examples/csv_sql/output/: high_costs.csv  low_sales.csv  meister.csv
examples/csv_sql/transforms/: high_costs.sql  low_sales.sql  meister.sql
myetl/: __main__.py  main.py
tests/: test_myetl.py
