[tool.poetry]
name = "myetl"
version = "0.1.0"
description = "Command line ETL tool"
authors = ["Felix Restorff <glebvnerzhin@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/gnerzhin/myetl"

[tool.poetry.scripts]
myetl = "myetl.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = { extras = ["all"], version = "^0.3.2" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
